--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>TITLE HERE</title>
   </head>
   <body style="padding: 0; margin: 0">
